ingress-path-base-routing/NginxApp2-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
        - name: app2-nginx
          image: shirishyamagekar/my-nginx-app:v2
          ports:
            - containerPort: 80
