ingress-path-base-routing/NginxApp3-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      labels:
        app: app3-nginx
    spec:
      containers:
        - name: app3-nginx
          image: shirishyamagekar/my-nginx-app:v3
          ports:
            - containerPort: 80
