ingress-path-base-routing/Frontend-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-clusterip-service
  labels:
    app: frontend-app
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 80
