ingress-path-base-routing/NginxApp3-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-clusterip-service
  labels:
    app: app3-nginx
spec:
  type: ClusterIP
  selector:
    app: app3-nginx
  ports:
    - port: 80
      targetPort: 80
