ingress-path-base-routing/ingress-pathbased-routing.yml
# RUN THE BELOW COMMANDS TO INSTALL NGINX INGRESS CONTROLLER
#helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
#helm repo update
#helm install ingress-nginx ingress-nginx/ingress-nginx --namespace ingress-nginx --create-namespace

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pathbased-routing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  defaultBackend: #### use this backend or as mentioned in below rules if path is not mentioned in rules
#  service:
#    name: frontend-app
#    port:
#      number: 80
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service # this is from app version 1 meta data
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service # this is from app version 2 meta data
                port: 
                  number: 80
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: app3-nginx-clusterip-service # this is from app version 3 meta data
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app-clusterip-service # this is from app frontend meta data
                port: 
                  number: 80
